2004-06-02 Adrian Dawe <adrian.dawe@multigig.com>

	* src/frontend/com_dl.c src/frontend/com_dl.c src/frontend/commands.c:
	Add function xaltermod

2004-06-02 Stefan Jones <stefan.jones@multigig.com>

	* configure.in:
	Change to version 16
	Disable GnuReadline in tclspice
	
	* src/tclspice.c:
	Added trigger and step callbacks
	Fix redef of sighandler_t

	* src/pkgIndex.tcl.in:
	set a global variable spice_version

2004-05-26 Stefan Jones <stefan.jones@multigig.com>

	* src/tclspice.c src/include/ngspice.h src/misc/tilde.c
	src/spicelib/devices/dev.c src/xspice/ipc/ipcsockets.c:
	Fixup for compiling under mingw

2004-05-21 Stefan Jones <stefan.jones@multigig.com>

	* src/frontend/terminal.c:
	Fix buffer overflow in out_printf

2004-05-19 Stefan Jones <stefan.jones@multigig.com>

	* src/tclspice.c:
	Made the trigger time more exact

2004-05-03 Stefan Jones <stefan.jones@multigig.com>

	* src/spicelib/analysis/acan.c:
	So resume works for ac analysis

2004-05-03 Stefan Jones <stefan.jones@multigig.com>

	* src/spicelib/parser/inp2dot.c:
	Fix .noise statements by reverting Brorson's INPgetNetTok lines

2003-12-24 Stefan Jones <stefan.jones@multigig.com>

	* configure.in:
	Fix the check for headers so it actually uses the info from tclConfig.sh

2003-12-13 Evgeny Fiksman <fike@bezeqint.net>

	* src/frontend/terminal.c:
	Increase the buffer size for tgetent

2003-12-03 Stefan Jones <stefan.jones@multigig.com>

	* configure.in:
	Change to version 0.2.15

2003-10-31 Stuart Brorson <sdb@cloud9.net>
 
	*  Integrated readline into ngspice CLI.  Code was shamelessly
	stolen from http://www.btae.mam.gov.tr/~genc/ngspice/ & reworked by SDB.

	*  Fixed makefiles in src/xspice/icm and src/xspice/cmpp to make distclean
	without barfing.

2003-09-30 Vera Albrecht <albrecht@danalyse.de>

	* src/include/cktdefs.h src/spicelib/analysis/noisean.c:
	Fix resuming noise analysis causing segfault,
	also fix compiler warnings.

2003-08-31 Stefan Jones <stefan.jones@multigig.com>
