@@ -1,3 +1,10 @@
+2004-06-04 Stefan Jones <stefan.jones@multigig.com>
+
+	* src/tclspice.c:
+	Do not register more than one identical trigger
+	Return voltage triggered at also
+	Add name tag (optional) for all triggers
+	
 2004-06-02 Adrian Dawe <adrian.dawe@multigig.com>
 
 	* src/frontend/com_dl.c src/frontend/com_dl.c src/frontend/commands.c:
